adding some digital garden space

--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,17 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
+
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
+#config for manpages
+collections:
+  manpages:
+    output: true
+    permalink: /:categories/:name
 
 # Sass settings
 #sass:
