--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 👻 renato 👻
+title: renato
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -42,10 +42,10 @@ collections:
     output: true
     permalink: /:path/:categories/:name
 
-collections:
-  manpages:
+#collections:
+  #manpages:
     #    output: true
-    permalink: /manpages/:categories/:name
+    #permalink: /manpages/:categories/:name
 
 # Sass settings
 #sass:
